<resources>
    <string name="app_name">Movie DB</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_watchlist">Watch list</string>
    <string name="what_do_you">What do you want to watch?</string>
    <string name="text_search">Search</string>
    <string name="name_tab_now_playing">Now playing</string>
    <string name="name_tab_upcoming">Upcoming</string>
    <string name="name_tab_top_rated">Top rated</string>
    <string name="name_tab_popular">Popular</string>
    <string name="titleNameMovie">title Name movie</string>
    <string name="voteAverage">Ratting</string>
    <string name="genre">genre</string>
    <string name="release_year">release year</string>
    <string name="text_detail">Detail</string>
    <string name="movie_title">original title</string>
    <string name="text_tab_about_movie">About Movie</string>
    <string name="text_tab_reviews">Reviews</string>
    <string name="text_tab_similar_movie">Similar Movie</string>
    <string name="minutes"> Minutes</string>
</resources>
